	* Add .python-version in preferred order to support pyenv.
	* Fix problem with relative test imports using Pycharm on Linux.
	* Adjust GHA build process to allow builds for stacked PRs.
	* Add a new `run clean` target to clean up generated data.
	* Move unit tests from `tests` into `src/tests/reorder`.
	* Update the MyPy configuration so we're using latest rules.

Version 0.2.7     08 Jan 2025

	* Migrate to Poetry v2 and project-managed Poetry plugins.
	* Move configuration into pyproject.toml for pytest, mypy & coverage.
	* Upgrade to gha-shared-workflows@v8 for Poetry v2 support.
	* Fix resource not closed bug exposed by pytest warnings->errors config.
	* Update all dependencies and outdated constraints.

Version 0.2.6     02 Jan 2025

	* Add GitHub security policy in SECURITY.md.
	* Pull in latest version of run-script-framework.
	* Update dependencies to address Dependabot warnings.
	* Upgrade to gha-shared-workflows@v7 with publish improvements.
	* Add a default .pytest.ini file based on new cookiecutter template.
	* Change the default branch in GitHub from master to main.

Version 0.2.5     15 Oct 2024

	* Pull in latest updates from run-script-framework.
	* Simplify GHA integration with coveralls.io.
	* Update transitive dependencies to address Dependabot warnings.
	* Add support for Python v3.13, no need to drop older versions.
	* Upgrade to Poetry v1.8.4 for official Python 3.13 support.

Version 0.2.4     26 Feb 2024

	* Upgrade to Poetry v1.8.0 and make related adjustments.
	* Disable Python keyring via poetry.toml.
	* Update Poetry install instructions in DEVELOPER.md.
	* Pull in latest version of run-script-framework.
	* Upgrade to gha-shared-workflows@v4 with new Poetry setup.
	* Add support for 'run outdated' and update dependencies.

Version 0.2.3     17 Jan 2024

	* Update jinja2 to address CVE-2024-22195 from Dependabot.

Version 0.2.2     05 Nov 2023

	* Update urllib3 to address Dependabot warnings.